# httpcat-polyglot

./: README.md  httpcat-polyglot.sln
implementations/httpcat-dart/: .gitignore  Justfile  README.md  devenv.nix  pubspec.yaml
implementations/httpcat-dart/lib/: cmd.dart  logic.dart
implementations/httpcat-dart/test/: logic_test.dart
implementations/httpcat-deno/: .gitignore  Justfile  README.md  deno.jsonc  devenv.nix  main.ts
implementations/httpcat-deno/src/: cmd.ts  logic.ts  logic_test.ts
implementations/httpcat-go/: .gitignore  Justfile  README.md  devenv.nix  go.mod  go.sum  main.go
implementations/httpcat-go/cmd/: root.go
implementations/httpcat-go/logic/: logic.go  logic_test.go
implementations/httpcat-java/: .gitignore  README.md  devenv.nix  settings.gradle.kts
implementations/httpcat-java/app/: build.gradle.kts
implementations/httpcat-kotlin/: .gitignore  Justfile  README.md  settings.gradle.kts
implementations/httpcat-kotlin/app/: build.gradle.kts
implementations/httpcat-net/: .gitignore  Justfile  devenv.nix  httpcat-net.sln
implementations/httpcat-node/: .gitignore  Justfile  README.md  biome.json  devenv.nix  package-lock.json  package.json  tsconfig.json
implementations/httpcat-python/: .gitignore  Justfile  README.md  devenv.nix  pyproject.toml
implementations/httpcat-python/httpcat/: cmd.py  logic.py  main.py
implementations/httpcat-python/tests/: test_httpcat.py
implementations/httpcat-rust/: .gitignore  Cargo.toml  Justfile  README.md  devenv.nix
implementations/httpcat-rust/src/: cmd.rs  logic.rs  main.rs
(+21 files in other folders)
