[tool.poetry]
name = "httpcat-py"
version = "0.1.0"
description = ""
authors = ["Denis BOURGE <5091110+Srynetix@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "httpcat" }
]

[tool.poetry.scripts]
httpcat-py = "httpcat.main:main"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"
httpx = "^0.27.0"
ascii-magic = "^2.3.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.6"
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
